feat: implement forgot password, verify code, reset password API and update OpenAPI docs
